--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
+<!DOCTYPE html>
+<html>
+<body style="background-color:powderblue;">
 <H1>Aubyn Staples Diary</H1>
 1st January 1938 - Saturday
 Fine Bright day - Rita Jean with Dad, mom and I.
 At the Kleinemonde. Went spearing last night.
+</html>
