--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
 <H1>Aubyn Staples Diary</H1>
 
 1st January 1938 - Saturday
-Fine Bright day - Rita Jean with Dad, mom and I.
-  At the Kleinemonde. Went spearing last night 9 - 1.30 PM-AM at Clayton's Rocks.
-  Got 1 Jan Bruin, 1 Moonie each about 7lbs. and 29 Kolsterts. Took picture of them.
-  Listened at L.E.A. Palmers to the Grand Prix. Buller Meyer RilyI
+Fine Bright day - Rita & Jean with Dad, Mom and I.
+  At the Kleinemonde. Went spearing last night 9 - 1.30 PM-AM 
+  at Clayton's Rocks.  Got 1 Jan Bruin, 1 Moonie each 
+  about 7lbs. and 29 Kolsterts. Took picture of them.
+  Listened at L.E.A. Palmers to the Grand Prix. Buller Meyer Rily I
   Monkey Richardson Rily III while Sienna Mazzera #1 II.
 
 2nd January 1938 - Sunday
 Fine bright day - foggy night
-  Last night Russell Smailes & I went spearing - got 17. 2. Jan Bruines. 
-  Played  Kan-U-Go at Brinks till 10pm., then had a chat at "Y worri" with
+  Last night Russell Smailes & I went spearing - 
+  got 17. 2. Jan Bruins. Played Kan-U-Go at Brinks 
+  till 10 P.M., then had a chat at "Y worri" with
   Prof. Omar Cooper (Entomology) then went spearing.
   "     "     "     working on False Coddling Moth.
 
