--- a/index.html
+++ b/index.html
@@ -3,26 +3,26 @@
 <body style="background-color:powderblue;">
 
 <H1>Aubyn Staples Diary</H1>
-
-1st January 1938 - Saturday
-Fine Bright day - Rita & Jean with Dad, Mom and I.
-  At the Kleinemonde. Went spearing last night 9 - 1.30 PM-AM 
-  at Clayton's Rocks.  Got 1 Jan Bruin, 1 Moonie each 
-  about 7lbs. and 29 Kolsterts. Took picture of them.
-  Listened at L.E.A. Palmers to the Grand Prix. Buller Meyer Rily I
-  Monkey Richardson Rily III while Sienna Mazzera #1 II.
-
-2nd January 1938 - Sunday
-Fine bright day - foggy night
-  Last night Russell Smailes & I went spearing - 
-  got 17. 2. Jan Bruins. Played Kan-U-Go at Brinks 
-  till 10 P.M., then had a chat at "Y worri" with
-  Prof. Omar Cooper (Entomology) then went spearing.
-  "     "     "     working on False Coddling Moth.
-
-3rd January 1938 - Monday
-Fine day warm
-  Went spearing last night at Oyster Rocks - got
-  1 Kolstert and 11 springers.
-  
+<br>
+1st January 1938 - Saturday<br>
+Fine Bright day - Rita & Jean with Dad, Mom and I.   <br>
+  At the Kleinemonde. Went spearing last night 9 - 1.30 PM-AM   <br> 
+  at Clayton's Rocks.  Got 1 Jan Bruin, 1 Moonie each   <br>
+  about 7lbs. and 29 Kolsterts. Took picture of them.   <br>
+  Listened at L.E.A. Palmers to the Grand Prix. Buller Meyer Rily I   <br>
+  Monkey Richardson Rily III while Sienna Mazzera #1 II.   <br>
+<br>
+2nd January 1938 - Sunday   <br>
+Fine bright day - foggy night   <br>
+  Last night Russell Smailes & I went spearing -   <br> 
+  got 17. 2. Jan Bruins. Played Kan-U-Go at Brinks   <br>
+  till 10 P.M., then had a chat at "Y worri" with   <br>
+  Prof. Omar Cooper (Entomology) then went spearing.   <br>
+  "     "     "     working on False Coddling Moth.   <br>
+<br>
+3rd January 1938 - Monday   <br>
+Fine day warm   <br>
+  Went spearing last night at Oyster Rocks - got   <br>
+  1 Kolstert and 11 springers.   <br>
+<br>
 </html>
