--- a/index.html
+++ b/index.html
@@ -1,28 +1,66 @@
 <!DOCTYPE html>
 <html>
 <body style="background-color:powderblue;">
-
 <H1>Aubyn Staples Diary</H1>
 <br>
-1st January 1938 - Saturday<br>
-Fine Bright day - Rita & Jean with Dad, Mom and I.   <br>
+1st January 1938 - Saturday     <u>Fine bright day.</u><br>
+Rita & Jean with Dad, Mom and I.   <br>
   At the Kleinemonde. Went spearing last night 9 - 1.30 PM-AM   <br> 
   at Clayton's Rocks.  Got 1 Jan Bruin, 1 Moonie each   <br>
   about 7lbs. and 29 Kolsterts. Took picture of them.   <br>
   Listened at L.E.A. Palmers to the Grand Prix. Buller Meyer Rily I   <br>
   Monkey Richardson Rily III while Sienna Mazzera #1 II.   <br>
 <br>
-2nd January 1938 - Sunday   <br>
-Fine bright day - foggy night   <br>
+2nd January 1938 - Sunday     <u>Fine bright day - foggy night</u>   <br>
   Last night Russell Smailes & I went spearing -   <br> 
   got 17. 2. Jan Bruins. Played Kan-U-Go at Brinks   <br>
   till 10 P.M., then had a chat at "Y worri" with   <br>
   Prof. Omar Cooper (Entomology) then went spearing.   <br>
   "     "     "     working on False Coddling Moth.   <br>
 <br>
-3rd January 1938 - Monday   <br>
-Fine day warm   <br>
+3rd January 1938 - Monday     <u>Fine day warm</u>   <br>
   Went spearing last night at Oyster Rocks - got   <br>
-  1 Kolstert and 11 springers.   <br>
+  1 Kolstert and 11 springers. Today went up to Claytons   <br>
+  Rock's with Palmer crowd. After a days fishing got   <br>
+  2 high waters, which I gave to Owen Pike.   <br>
+  Bait was plentify. Spent the evening   <br>
+  playing Monoply with Eric and the boys   <br>
+  down at Jocks.   <br>
 <br>
+4th January 1938 Tuesday     Rather hot.   <br>  
+  Went up to Claytons Rocks with the   <br>
+  Palmer crowd. Fished all day but   <br>
+  without success. Doreen Ray & I went   <br>
+  to watch the children playing games on   <br>
+  the sand hills. Oh boy, can the rising   <br>
+  generation kiss?   <br>
+    Dad broke his rod.   <br>
+<br>
+5th January 1938 Wednesday   <br>
+  Dad's birthday. Brink, Jock, Dad & I   <br>
+  left the Kleinemond this morning at 7 for   <br>
+  home in Merricks V8.  At 'Comfort'   <br>
+  I got onto my bike and rode via   <br>
+  Bathurst to 'Curries Drift'. Stopped for a   <br>
+  short while at Willmores & had tea.   <br>
+  Our turn for <u>Dip</u> again.   <br>
+  Got a letter from Rosemary.   <br>
+  Boys getting pine plants out of Willmores   <br>
+  ground.   <br>
+  Back to Kleinemond in the afternoon -    <br>
+  played bridge. Jerripico & bed.   <br>
+<br>
+6th January 1938     <u>Clear - Nasty Cold West Wind</u>
+  Reid River boys played Kleinemonde, Cricket   <br>
+  and were beaten. Watching was scant   <br>
+  pleasure though since there seemed to be   <br>
+  a regular sand storm. Altogether it   <br>
+  was a rotten day<br>
+<br>
+                
+** Jan Bruins - a kind of fish.
+** Jerripico - some sort of South African wine?
+<br>
+
+  
 </html>
