--- a/index.html
+++ b/index.html
@@ -55,11 +55,21 @@ Rita & Jean with Dad, Mom and I.   <br>
   and were beaten. Watching was scant   <br>
   pleasure though since there seemed to be   <br>
   a regular sand storm. Altogether it   <br>
-  was a rotten day<br>
+  was a rotten day.<br>
 <br>
-                
-** Jan Bruins - a kind of fish.
-** Jerripico - some sort of South African wine?
+7th January 1938     <u>Fine Day. Rather Warm.</u>
+  Started the day on Monoply up at S.Timms.   <br>
+  Then we went down to Jock's boat and   <br>
+  tested the engine. Eventually got it going   <br>
+  O.K.. then we got bait - had lunch, and   <br>
+  after several delays. Brink, Jock, Sharkey, Jimmy   <br>
+  Peter, Beaut & myself went up the river.   <br>
+  Sharkey caught a 6lb Cob on his river Line.   <br>
+                                          Prawn.<br>
+<br>
+** Cob? more likely to be a cod - D's often changed to B's in original.
+** Jan Bruins - a kind of fish.<br>
+** Jerripico - some sort of South African wine?<br>
 <br>
 
   
