--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@ Rita & Jean with Dad, Mom and I.   <br>
   Back to Kleinemond in the afternoon -    <br>
   played bridge. Jerripico & bed.   <br>
 <br>
-6th January 1938     <u>Clear - Nasty Cold West Wind</u>
+6th January 1938     <u>Clear - Nasty Cold West Wind</u><br>
   Reid River boys played Kleinemonde, Cricket   <br>
   and were beaten. Watching was scant   <br>
   pleasure though since there seemed to be   <br>
   a regular sand storm. Altogether it   <br>
   was a rotten day.<br>
 <br>
-7th January 1938     <u>Fine Day. Rather Warm.</u>
+7th January 1938     <u>Fine Day. Rather Warm.</u>   <br>
   Started the day on Monoply up at S.Timms.   <br>
   Then we went down to Jock's boat and   <br>
   tested the engine. Eventually got it going   <br>
