--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html>
 <body style="background-color:powderblue;">
-<H1>Aubyn Staples Diary</H1>
+<H1>Aubyn Warner Staples Diary</H1>
+  Aged around 24 years old? <br>
+<br>
+This diary was written in 1938 in the Eastern Cape of South Africa.  <br>
+Attitudes back then were very different, where these are very        <br>
+offensive I will try remove them but will try keep as much of the    <br>
+original content as possible for the sake of authenticity.           <br>
+These views are NOT my own, I am trying to keep a bit of history alive.  <br>
+  Glynn Staples Skaffen1@gmail.com.   <br>
 <br>
 1st January 1938 - Saturday     <u>Fine bright day.</u><br>
 Rita & Jean with Dad, Mom and I.   <br>
@@ -50,14 +58,14 @@ Rita & Jean with Dad, Mom and I.   <br>
   Back to Kleinemond in the afternoon -    <br>
   played bridge. Jerripico & bed.   <br>
 <br>
-6th January 1938     <u>Clear - Nasty Cold West Wind</u><br>
+6th January 1938 Thursday    <u>Clear - Nasty Cold West Wind</u><br>
   Reid River boys played Kleinemonde, Cricket   <br>
   and were beaten. Watching was scant   <br>
   pleasure though since there seemed to be   <br>
   a regular sand storm. Altogether it   <br>
   was a rotten day.<br>
 <br>
-7th January 1938     <u>Fine Day. Rather Warm.</u>   <br>
+7th January 1938 Friday     <u>Fine Day. Rather Warm.</u>   <br>
   Started the day on Monoply up at S.Timms.   <br>
   Then we went down to Jock's boat and   <br>
   tested the engine. Eventually got it going   <br>
@@ -67,7 +75,44 @@ Rita & Jean with Dad, Mom and I.   <br>
   Sharkey caught a 6lb Cob on his river Line.   <br>
                                           Prawn.<br>
 <br>
-** Cob? more likely to be a cod - D's often changed to B's in original.
+8th January 1938 Saturday     <u>Fine day. Shower in the evening</u><br>
+<i>Text in the diary: Fire Insurances expire</i><br>
+  Lazy day. Got up late, breakfast, then   <br>
+  read awhile. Then played monoply at Brinks.   <br>
+  at 5:30 I got the Terraplane out for Dad.   <br>
+  after which he Rita & Jean went home via P.A.   <br>
+  Mom & I played bridge with Mr. Mrs John Bradfield.   <br>
+<br>
+9th January 1938 Sunday     <u>Fine day.</u>   <br>
+  Packed up our goods and by 10:15AM. Mom & I   <br>
+  had said good-bye to Kleinemonde, and headed for   <br>
+  home in the Lorry. After lunch at 'Comfort'   <br>
+  came on to Curries Drift; found everything O.K.   <br>
+  James Cultivating mealies below the house.   <br>
+<br>
+10th January 1938 Monday     <u>Hot morning. Cool breeze PM</u>   <br>
+  Beat out Jumbo Ploughshares while oxen were being   <br>
+  fetched. Then sent 2 boys to harrow pine land.   <br>
+  2 boys to cultivate mealies below house. Balanee   <br>
+  to hoe & cut down trees. Dad came over   <br>
+  to see third ploughing of pine land started. Majic   <br>
+  proves a failure. Jumbo must plough. More   <br>
+  bullocks needed, so Kewitt & Mfumfu go with Dad  <br>
+  to bring bullocks back tomorrow - and 2 Cows   <br>
+<br>
+11th January 1938 Tuesday     <u>Fine day. Warm</u>   <br>
+<i>Text in Diary: Hilary Law Sittings begin</i>   <br>
+  After starting the work on 'Curries Drift', I went   <br>
+  home to 'Comfort', and then took Mom & Rita to   <br>
+  town on the lorry. Had dinner in the Gardens.   <br>   
+  Got home at 5:30PM., had supper & came on to   <br>
+  Curries Drift. Boys hoeing.   <br>   
+  Two boys chopping down bush east of orchard. Papai & Koffee.   <br>
+  Two boys harrowing pine land hired from Lorry Penny. Pau & leader   <br>
+  Two boys cultivating Mealies below house. James & Bus.   <br>
+<br>
+<br>
+** Cob? or cod - D's often changed to B's in original.
 ** Jan Bruins - a kind of fish.<br>
 ** Jerripico - some sort of South African wine?<br>
 <br>
