--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   Aged around 24 years old? <br>
 <br>
 This diary was written in 1938 in the Eastern Cape of South Africa.  <br>
-Attitudes back then were very different, where these are very        <br>
-offensive I will try remove them but will try keep as much of the    <br>
-original content as possible for the sake of authenticity.           <br>
+Attitudes back then were very different, where these are offensive   <br>
+I will try remove them but will try keep as much of the original     <br>
+content as possible for the sake of authenticity.                    <br>
 These views are NOT my own, I am trying to keep a bit of history alive.  <br>
   Glynn Staples Skaffen1@gmail.com.   <br>
 <br>
@@ -111,6 +111,32 @@ Rita & Jean with Dad, Mom and I.   <br>
   Two boys harrowing pine land hired from Lorry Penny. Pau & leader   <br>
   Two boys cultivating Mealies below house. James & Bus.   <br>
 <br>
+12th January 1938 Wednesday     <u>Very hot morning. Cool South Wind PM Signs of Raine : Cloudy just after 4P.M.</u><br>
+  Sent Kewitt, Pav, a Leader to plough in Lorries   <br>
+  ground. 3rd ploughing about 1ft. deep. Jumbo plough.  <br>
+  James & Bus harrowing in the mealies   <br>
+  Matotwani worked with me, disc harrowing   <br>
+  between oranges.  Weeds are tall tough   <br>
+  and the ground well carpeted. Marigold, Burweed   <br>
+  and Stinkblom. Never in my life seen so   <br>
+  many of either variety. Twas very hot and   <br>
+  smelly work.   <br>
+  Tractor ran eight hours.   <br>
+  Put in 8 gals. paraffin.
+<br>
+13th January 1938 Thursday     <u>hot windy day. W.</u><br>
+  After getting the boys set to work which   <br>
+  means the usual sharpening of plough-   <br>
+  shares etc.  I went home to ask Dad    <br>
+  to please come over tomorrow & to first go   <br>
+  to Town and get me <u>two hoes</u> and   <br>
+  <u>six spades</u> so that tomorrow we can   <br>
+  plant pines.  Spent the rest of the   <br>
+  day at home.  Took C.B. Austen's   <br>
+  Durant cylinder head off, discovered broken piston.    <br>
+<br>
+14th January 1938 Friday    <u>Cloudy windy Day. W.</u>
+          
 <br>
 ** Cob? or cod - D's often changed to B's in original.
 ** Jan Bruins - a kind of fish.<br>
