--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ Rita & Jean with Dad, Mom and I.   <br>
   many of either variety. Twas very hot and   <br>
   smelly work.   <br>
   Tractor ran eight hours.   <br>
-  Put in 8 gals. paraffin.
+  Put in 8 gals. paraffin.    <br>
 <br>
 13th January 1938 Thursday     <u>hot windy day. W.</u><br>
   After getting the boys set to work which   <br>
@@ -135,13 +135,17 @@ Rita & Jean with Dad, Mom and I.   <br>
   day at home.  Took C.B. Austen's   <br>
   Durant cylinder head off, discovered broken piston.    <br>
 <br>
-14th January 1938 Friday    <u>Cloudy windy Day. W.</u>
-          
+14th January 1938 Friday    <u>Cloudy windy Day. W.</u><br>
+<br>
+  <br>
 <br>
 ** Cob? or cod - D's often changed to B's in original.
 ** Jan Bruins - a kind of fish.<br>
 ** Jerripico - some sort of South African wine?<br>
 <br>
-
-  
+<img src="DiaryFrontCover.jpg" alt="Diary Front Cover">
+<br>
+  <br>
+  <br>
+  <br>
 </html>
