--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ Rita & Jean with Dad, Mom and I.   <br>
 ** Jan Bruins - a kind of fish.<br>
 ** Jerripico - some sort of South African wine?<br>
 <br>
-<img src="DiaryFrontCover.jpg" alt="Diary Front Cover">
+<img src="DiaryFrontCover.jpg" style="width: 25%; height: 25%" alt="Diary Front Cover">
 <br>
   <br>
   <br>
