--- a/index.html
+++ b/index.html
@@ -136,6 +136,42 @@ Rita & Jean with Dad, Mom and I.   <br>
   Durant cylinder head off, discovered broken piston.    <br>
 <br>
 14th January 1938 Friday    <u>Cloudy windy Day. W.</u><br>
+  Sunset last night I came back to   <br>
+  Curries Drift. This morning I got up   <br>
+  early, started the Tractor & harrowed   <br>
+  and rolled the land.  At nine Dad came   <br>
+  over with the spades & we started planting   <br>
+  <u>pines.</u>  Plants are very poor - have to   <br>
+  put two in a hole.  Planted four rows.   <br>
+  Went home in the evening.   <br>
+<br>
+15th January 1938 Saturday     <u>Warm Day.</u>
+  At "Comfort".  Lazed round reading  <br>
+  all morning.  In the afternoon got   <br>
+  the Terraplane ready and after an   <br>
+  early supper went to town to   <br>
+  see The "Prisoner of Zenda".  Rita  <br>
+  and I sat in the Dickie.   <br>
+<br>
+16th January 1938 Sunday     <u>Cold Drizzle, very slight</u>  <br>
+  Started work fairly late, but have got <u>pines</u>   <br>
+  11.5 rows planted today.  Drizzle interfered   <br>
+  with the ploughing.  A shame.   <br>
+<br>
+17th January 1938 Monday <u>Drizzle AM. Very hot & W Wind PM.</u> <br>
+  <u>Planting pines.</u> Had breakfast & found    <br>
+  that the boys had caught up wiht my   <br>
+  marking.  Marked more. Noted that more   <br>
+  plants were needed. Too wet for oxen, so   <br>
+  went back for tractor. Wouldn't start. Wires  <br>
+  wet. Discovered <u>impulse starter blade</u> broken   <br>
+  Eventually she started. Got a lot of work   <br>
+  done today - but what a rush. Spent the   <br>
+  evening at "Comfort" with Rita & J&as. Mom & Dad Masonic.   <br>
+<br>
+18th January 1938 Tuesday     <u>Foggy Morn. Very hot day. Wind Slight W. </u>  <br>
+  
+  
 <br>
   <br>
 <br>
