--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ Rita & Jean with Dad, Mom and I.   <br>
   Two boys harrowing pine land hired from Lorry Penny. Pau & leader   <br>
   Two boys cultivating Mealies below house. James & Bus.   <br>
 <br>
-12th January 1938 Wednesday     <u>Very hot morning. Cool South Wind PM Signs of Raine : Cloudy just after 4P.M.</u><br>
+12th January 1938 Wednesday   <u>Very hot morning. Cool South Wind PM Signs of Rain : Cloudy just after 4P.M.</u><br>
   Sent Kewitt, Pav, a Leader to plough in Lorries   <br>
   ground. 3rd ploughing about 1ft. deep. Jumbo plough.  <br>
   James & Bus harrowing in the mealies   <br>
