--- a/index.html
+++ b/index.html
@@ -170,7 +170,72 @@ Rita & Jean with Dad, Mom and I.   <br>
   evening at "Comfort" with Rita & J&as. Mom & Dad Masonic.   <br>
 <br>
 18th January 1938 Tuesday     <u>Foggy Morn. Very hot day. Wind Slight W. </u>  <br>
-  
+  Got a good start from home (Comfort)         <br>
+  had breakfast at 'Curries Drift', & went up   <br>
+  <u>to Pines.</u> got there just as they had   <br>
+  finished the marked rows.  Tractor had   <br>
+  to finish the acre being ploughed.  Oxen played   <br>
+  out on account of heat.  By tonight   <br>
+  however I have everything ready for    <br>   
+  another 10,000 plants.  Tractor worked   <br>
+  6 and a half hours. Part time with Matotwe.   <br>
+<br>
+19th January 1938 Wednesday     Dry West Wind. V.H.   <br>
+  Planting pines. Matotwane marking.   <br>
+  Cleaned the tractor, fitted a    <br>
+  switch. Completed the greasing.   <br>
+  Left last night because the gun would   <br>
+  not operate, due to paper in the   <br>
+  grease.  In the late afternoon   <br>
+  went to Comfort for supper   <br>
+  and to see about meal for   <br>
+  rations.  Dad has broken spring   <br>
+  of lorry & just about burned the   <br>
+  endine out.   <br>
+<br>
+20th January 1938 Thursday     Extremely Hot A.M. 113 in shade. Slight rain 5 P.M.   <br>
+  Left home this morning & on arrival at Curries D.   <br>
+  pulled the motorbike engine down -   <br>
+  found nothing wrong.  Dad came   <br>
+  over to see Powell.  But   <br>
+  the damn fool only hedged around.  All a failure!  Its   <br>
+  been as hot as the Devil till 3. P.M.   <br>   
+  4 bullocks ill.   <br>
+<br>
+21st January 1938 Friday     <u>Cool. Rained fairly hard P.M.</u>   <br>
+  Took tractor up to where I'm   <br>
+  planting pines, and did quite a   <br>
+  good few acres of harrowing in the    <br>
+  morning.  At half past one the rain   <br>
+  came down,  and I had to dismiss   <br>
+  the boys.  I went home.  Mag got   <br>
+  wet and gave trouble in the Culvert.  <br>
+<br>
+22nd January 1938 Saturday     Rain.   <br>
+  Still raining beautifully.  Lounged   <br>
+  around and read all morning,   <br>
+  then in the afternoon we all went   <br>
+  up to Watsons, and from then   <br>
+  on into town to see The Plainsmen.  <br>
+  Watsons came too.   <br>
+<br>
+23rd January 1938 Sunday     Rain approx 1" Clear Cool   <br>
+  Left Comfort early for Curries Drift   <br>
+  after breakfast took the tractor up to    <br>
+  the land and ploughed till 1 from 8.30.   <br>
+  In the afternoon harrowed in oranges.  <br>
+  <u>X 9hrs 13 gals.</u>   <br>
+<br>
+24th January 1938 Monday     <u>Fairly hot. Misty morning</u>   <br>
+  Started Matotwani oiling the tractor   <br>
+  and I went over to Lorry Pennys   <br>
+  to phone Dad regarding the work at   <br>
+  Comfort.  Then disc harrowed in the   <br>
+  oranges and that strip of land above   <br>
+  the Washingtons, which was blue with   <br>
+  burweed.  Then I started for home   <br>
+  with the tractor to plough 'Comfort' Lands.   <br>
+<br>
   
 <br>
   <br>
