--- a/index.html
+++ b/index.html
@@ -236,6 +236,81 @@ Rita & Jean with Dad, Mom and I.   <br>
   burweed.  Then I started for home   <br>
   with the tractor to plough 'Comfort' Lands.   <br>
 <br>
+25th January 1938 Tuesday     <u>Cloudy Slight rain P.M</u>   <br>
+  Got up early and started work on the  <br>
+  tractor - grease & oil etc. Had breakfast <br>
+  then took the tractor down to the land <br>
+  at the back of Tani's hut. Matotwani  <br>
+  & I took turns riding it. Dad <br>
+  came down & helped at Dinner time so  <br>
+  that it did not stop.  11 hrs.  Whole land  <br>
+  done despite the showers.  <br>
+<br>
+26th January 1938 Wednesday     <u>Cloudy. Slight rain P.M.</u> <br>
+  Started work with tractor fairly early   <br>
+  next to oranges.  Oxen cut rotten  <br>
+  furrows, & made work for tractor  <br>
+  very difficult.  In the afternoon I  <br>
+  left Matotwani ploughing & I got a lift  <br>
+  with Gerald Stacks to town.  On arrival  <br>
+  there went to Bio. After Bio found   <br>
+  Rita & Mom, and drove them to VGHS in   <br>
+  Will Horns car.  Saw Rita off for Rhodesia in the evening at 9:30  <br>
+  then Headed for home.  Matotwani  <br>
+  bent beam of the Wild Boar.   <br>
+<br>
+27th January 1938 Thursday    <u>Cloudy. Windy P.M.</u>   <br>
+  Up early to straighten the bent beam   <br>
+  of the plough.  Then Mom drove    <br>
+  me as far as the Gov. Bush in the Terraplane   <br>
+  and I went on to Curries Drift by foot.   <br>
+  Found everything O.K. except handles   <br>
+  of the Hillside plough were broken.   <br>
+  Came home by Motorbike.   <br>
+<br>
+28th January 1938 Friday     Devilish Hot. Stormy - no rain P.M.  <br>
+  Dad went to a sale somewhere  <br>
+  near Eric Estments.  All he got though  <br>
+  was a pit saw.  I built up a spring   <br>
+  for the Lorry & fitted it.  Matotwani  <br>
+  started for Curries Drift with the tractor  <br>
+  about 1 o clock.  In the evening  <br>
+  I went to Clumber to hear Bowker speak.  <br>
+<br>
+29th January 1938 Saturday    <br>
+  Lazed around and read practically  <br>
+  all day.  Went up to   <br>
+  Watsons for supper, and from  <br>
+  there on into town to see  <br>
+  the film.  Fog in the hills   <br>
+  coming out.   <br>
+<br>
+30th January 1938 Sunday      Cloudy <br>
+  We have had a bit more rain -  <br>
+  just a spot, but it has helped.  <br>
+  Mealies look good. Marked more   <br>
+  rows for oranges, & dug holes.  <br>
+<br>
+31st January 1938 Monday     Rain slight last night.  Cloudy & Warm.  <br>
+  Planting pines as hard as the   <br>
+  boys could, in the morning.  At  <br>
+  lunch time I went and ate a bit   <br>
+  with Fletcher Willmore.  Met Vincent Forward  <br>
+  & Bowles at Willmores.  Dad arrived with   <br>
+  Norman Tarr in the afternooon, and   <br>
+  brought 160 orange trees which we   <br>
+  planted & watered.   <br>
+<br>
+1st February 1938 Tuesday     Hot.  <br>
+  Planting pines. Pushing hard.  <br>
+  Nothing of great interest has  <br>
+  happened today.  Women   <br>
+  are loafing badly.  James  <br>
+  harrowed the mealies in   <br>
+  the orchard.   <br>
+<br>
+
+  
   
 <br>
   <br>
