--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@ Rita & Jean with Dad, Mom and I.   <br>
   Got up early and started work on the  <br>
   tractor - grease & oil etc. Had breakfast <br>
   then took the tractor down to the land <br>
-  at the back of Tani's hut. Matotwani  <br>
+  at the back of Fani's hut. Matotwani  <br>
   & I took turns riding it. Dad <br>
   came down & helped at Dinner time so  <br>
   that it did not stop.  11 hrs.  Whole land  <br>
