--- a/Feb1938.html
+++ b/Feb1938.html
@@ -1,2 +1,55 @@
-Start of file
-End of file
+<!DOCTYPE html>
+<html>
+<body style="background-color:powderblue;">
+<H1>Aubyn Warner Staples Diary</H1>
+  Aged around 24 years old? <br>
+<br>
+This diary was written in 1938 in the Eastern Cape of South Africa.  <br>
+Attitudes back then were very different, where these are offensive   <br>
+I will try remove them but will try keep as much of the original     <br>
+content as possible for the sake of authenticity.                    <br>
+These views are NOT my own, I am trying to keep a bit of history alive.  <br>
+  Glynn Staples Skaffen1@gmail.com.   <br>
+<br>
+1st February 1938 Tuesday     Hot.  <br>
+  Planting pines. Pushing hard.  <br>
+  Nothing of great interest has  <br>
+  happened today.  Women   <br>
+  are loafing badly.  James  <br>
+  harrowed the mealies in   <br>
+  the orchard.   <br>
+<br>
+2nd February 1938 Wednesday     Hot day. Slight rain PM.   <br>
+  Still planting pines. Jacks oxen are <br>
+  ploughing just ahead of the planting <br>
+  and Jonash's oxen are riding on <br>
+  plants.  I made a hard push <br>
+  today.  In the afternoon I took the <br>
+  tractor up to the land and ploughed <br>
+  out the ends.  A heavy thunder <br>
+  storm fell near Grahamstown  <br>
+  but did not quite reach us. We   <br>
+  got just enough to quit work.   <br>
+  <u>3 boys from AGP!</u>  <br>
+<br>
+3rd February 1938 Thursday     Warm.  <br>
+  Still planting pines as fast as I  <br>
+  can - rushing in fact.  Dad  <br>
+  came over and we looked things  <br>
+  over.  After dinner on my way  <br>
+  back to the house, a small puffadder  <br>
+  bit me on my third finger. I  <br>
+  gave it first aid, then went home  <br>
+  on the Motor bike, then Dad drove  <br>
+  me to hospital, where I had anti-serum  <br>
+<br>
+4th February 1938 Friday   <u>Cool. Cloudy.</u>
+  <br>
+<br>
+<br>
+<img src="DiaryFrontCover.jpg" style="width: 25%; height: 25%" alt="Diary Front Cover">
+<br>
+  <br>
+  <br>
+  <br>
+</html>
