--- a/index.html
+++ b/index.html
@@ -309,9 +309,7 @@ Rita & Jean with Dad, Mom and I.   <br>
   harrowed the mealies in   <br>
   the orchard.   <br>
 <br>
-
-  
-  
+<a href="https://skaffen1.github.io/AubynStaples/Feb1938.html"> Click here to view February 1938. </a>
 <br>
   <br>
 <br>
