--- a/Feb1938.html
+++ b/Feb1938.html
@@ -41,12 +41,54 @@ These views are NOT my own, I am trying to keep a bit of history alive.  <br>
   bit me on my third finger. I  <br>
   gave it first aid, then went home  <br>
   on the Motor bike, then Dad drove  <br>
-  me to hospital, where I had anti-serum  <br>
+  me to hospital, where I had anti-serum.  <br>
 <br>
-4th February 1938 Friday   <u>Cool. Cloudy.</u>
+4th February 1938 Friday   <u>Cool. Cloudy.</u>  <br>
+  Woke up at 2am this morning and could not   <br>
+  get back to sleep. Nurse gave me   <br>
+  sleeping powders but they did not help   <br>
+  so I read till morning.  Nurses were    <br>
+  nicer but mostly Afrikaans.  My hand a    <br>
+  bit better.  Came home with Grandfather   <br>
+  and went to bed again - still   <br>
+  badly swollen - and going blue.   <br>
+<br>
+5th February 1938 Saturday  <u>Cool. Slightly Windy</u>  <br>
+  Still laid up with my snake-bite: BUT    <br>
+  I feel very much better today, in fact   <br>
+  I got up and saw Allston off this morning.   <br>
+  Had my meals in the dining room.   <br>
+<br>
+6th February 1938 Sunday     <u>Drizzle-heavy</u>   <br>
+  Went over to Curries Drift in Terraplane   <br>
+  with Dad.  Got stuck at foot of my   <br>
+  hill.  Attended to work.  Still    <br>
+  planting pines.   <br>
+<br>
+7th February 1938 Monday     <u>Drizzle</u>   <br>
+  Dad went to Brinks to fetch Lemmons    <br>
+  & orange trees, and on return journey    <br>
+  to fetch Cecils goods from Martindale.    <br>
+  In the afternoon we went to town    <br>
+  in the Terraplane.  I went to the    <br>
+  hospital for a few minutes to return     <br> 
+  bandage. Scoured the town for    <br>
+  a mag for Cecils Durant.    <br>
+<br>
+8th February 1938 Tuesday     <u>Very hot.</u>   <br>
+  Left Comfort after an early breakfast   <br>
+  and took the lorry with two 3/4 bags    <br>
+  mealies and replacement of citrus    <br>
+  to fill in where Valencia & Lemmon    <br>
+  tress had died.  Took till Dinner    <br>
+  to plant them.  Duced headache!    <br>
+  In the afternoon <u>Long tick inspector</u>    <br>
+  called.    <br>
+<br>
   <br>
-<br>
-<br>
+  <br>
+  
+
 <img src="DiaryFrontCover.jpg" style="width: 25%; height: 25%" alt="Diary Front Cover">
 <br>
   <br>
